<resources>
    <string name="app_name">Vet Launcher</string>
    <string name="controlled_drug_use">Controlled Drug levels</string>
    <string name="user">User</string>
    <string name="body_condition_scoring">Herd Condition Scoring</string>
    <string name="topicbtn">Select</string>
    <string name="clinical_notes">Clinical Notes</string>
    <string name="topictext">No Topic Selected</string>
    <string name="date_used">Date Used:</string>
    <string name="client_name">Client Name:</string>
    <string name="animal">Animal:</string>
    <string name="ketamine">Ketamine</string>
    <string name="pamlin">Pamlin</string>
    <string name="pentobarb_300">Pentobarb 300</string>
    <string name="pentobarb_500">Pentobarb 500</string>
    <string name="xylaket">Xylaket</string>
    <string name="client_name_hint">Client name</string>
    <string name="animal_name_hint">Animal name</string>
    <string name="select_date">Select Date</string>
    <string name="savebtntxt">Save &amp; Exit</string>
    <string name="userbtntxt">User:</string>
    <string name="email_address">Email address(es \",\"):</string>
    <string name="emailhint">Where records sent</string>
    <string name="stocktake">Stocktake</string>
    <string name="submit">Submit</string>
    <string name="clinical_record">Clinical Record:</string>
    <string name="medications_used">Medications and Materials</string>
    <string name="controlled_drugs">Controlled Drugs</string>
    <string name="to_diary">To Diary</string>
    <string name="to_email">To Email</string>
    <string name="vet_visit_record">Clinical Record</string>
    <string name="settings_button_image">Settings button image</string>
    <string name="logo">logo</string>
    <string name="title_activity_diary">Vet Diary</string>
    <string name="mls">mls</string>
    <string name="controlled_drug_used_for">Controlled Drug used for:</string>
    <string name="save">Save</string>
    <string name="vet_diary">Diary</string>
    <string name="calendar_button">calendar button</string>
    <string name="title_activity_edit_visit">EditVisit</string>
    <string name="unlock">UNLOCK</string>
    <string name="delete">DELETE</string>
    <string name="date_button">Date button</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="download_list">Download List</string>
    <string name="group">group</string>
    <string name="filter">Filter</string>
    <string name="search">search</string>
    <string name="product_selected">Product Selected</string>
    <string name="hash">#</string>
    <string name="database_name">Database Name:</string>
    <string name="database_user">Database User:</string>
    <string name="database_password">Database Password:</string>
    <string name="name">Name</string>
    <string name="clinic">Clinic</string>
    <string name="product_name_50ml_blar">Product Name 50ml blar</string>
    <string name="_1000">1000</string>
    <string name="diazepam">Diazepam</string>
    <string name="product">Product:</string>
    <string-array name="cdUse">
        <item>Select use:</item>
        <item>Import</item>
        <item>Castrate</item>
        <item>Surgery</item>
        <item>Euthanasia</item>
        <item>Velvet</item>
        <item>Expired</item>
    </string-array>
    <string name="title_activity_barcode_scanner">BarcodeScanner</string>
    <string name="dairy_number">Dairy Number:</string>
    <string name="farm_name">Farm Name:</string>
    <string name="contact_name">Contact Name:</string>
    <string name="ph_number">Ph number:</string>
    <string name="address">Address:</string>
    <string name="update">Update</string>
    <string name="vitals">Vitals:</string>
    <string name="extended_notes">Extended Notes:</string>
    <string name="image_links">Images</string>
    <string name="_0">0</string>
    <string name="version">Version</string>
    <string name="store">Store</string>
    <string name="upload_list">Upload List (0)</string>
    <string name="the_number_of">The number of stockcount records not yet sync\'ed:</string>
    <string name="notifications">Notifications</string>
    <string name="clients">Clients</string>
    <string name="export_database">Export Database</string>
    <string name="import_database">Import Database</string>
    <string name="grouping">Group:</string>
    <string name="on_hand">On Hand:</string>
    <string name="export_diary">Export Diary</string>
    <string name="import_diary">Import Diary</string>
    <string name="password">Password</string>
    <string name="_3_75">3.75</string>
    <string name="_2_5">2.5</string>
    <string name="_3_0">3.0</string>
    <string name="_3_5">3.5</string>
    <string name="_4_25">4.25</string>
    <string name="_4_0">4.0</string>
    <string name="_4_5">4.5</string>
    <string name="_5_0">5.0</string>
    <string name="_5_5">5.5</string>
    <string name="_4_75">4.75</string>
    <string name="_6_0">6.0</string>
    <string name="_6_5">6.5</string>
    <string name="clear_all">Clear All</string>
    <string name="summary">Summary</string>
    <string name="load_previous_bcs_record">Load previous BCS Record</string>
    <string name="create_new_bcs_record">Create new BCS Record</string>
    <string name="herd_name">Herd name</string>
    <string name="newR">New</string>
    <string name="total_counted">Total counted:</string>
    <string name="successfully_stored">Successfully Stored</string>
    <string name="third_to_last_value">Third to last value:</string>
    <string name="second_to_last_value">Second to last value:</string>
    <string name="last_value">Last value:</string>
    <string name="body_condition_scoring_summary_for_herd">Body Condition Scoring Summary for Herd:</string>
    <string name="share_email_or_print">Share (Email or Print)</string>
    <string name="image">Image</string>
    <string name="enter_your_user_name">Enter your user name</string>
    <string name="visit_reminder">Visit Reminder</string>
    <string name="department_transfer">Department Transfer</string>
    <string name="product2">Product</string>
    <string name="get_barcode_list">Get Barcode List</string>
    <string name="log_transfer">Log Transfer</string>
    <string name="amount">Amount</string>
    <string name="to_department">To Department:</string>
    <string name="from_department">From Department:</string>
    <string name="units">Units</string>
    <string name="cpd_records">CPD Records</string>
    <string name="about">About</string>
    <string name="blackdogimage">BlackdogImage</string>
    <string name="vet_launcher_version">Vet Launcher - Version </string>
    <string name="created">Created by Black Dog Software founder</string>
    <string name="creator">David \"Dogroll\" O\'Brien</string>
    <string name="signage">Non-Practicing Veterinarian, BSc, BVSc</string>
    <string name="emailAddress">dave@blackdogservices.co.nz</string>
    <string name="quick_add">Quick Add</string>
    <string name="new_record">New Record</string>
    <string name="year">Year</string>
    <string name="class_cpd">Class</string>
    <string name="continuing_veterinary_ed">Continuing Veterinary Ed</string>
    <string name="collegial_learning">Collegial Learning</string>
    <string name="self_directed_learning">Self-Directed Learning</string>
    <string name="insert">Insert</string>
    <string name="hours">Hours:</string>
    <string name="cve">cve</string>
    <string name="cla">cla</string>
    <string name="sdl">sdl</string>
    <string name="info_button">Info Button</string>
    <string name="title_of_cpd_record">Title of CPD Record</string>
    <string name="provider_or_location">Provider or Location</string>
    <string name="description">Description</string>
    <string name="my_method_of_verification_nad_or_evidence_is">My method of verification and/or evidence is:</string>
    <string name="learning_outcomes_what_did_you_learn_or_teach">Learning Outcomes (What did you learn or teach?):</string>
    <string name="impact_how_does_this_learning_affect_my_work">Impact (How does this learning affect my work?):</string>
    <string name="print_to_pdf">Print to PDF</string>
    <string name="save_as_image">Save as Image</string>
    <string name="reflective_record">Reflective Record</string>
    <string name="points">Points:</string>
    <string name="activities_such_as">Activities such as:</string>
    <string name="evidence_such_as">Evidence such as:</string>
    <string name="divider">divider</string>
    <string name="export_bcs">Export BCS</string>
    <string name="export_cpd">Export CPD</string>
    <string name="import_bcs">Import BCS</string>
    <string name="import_cpd">Import CPD</string>
    <string name="function">Function</string>
    <string name="delete_diary">Delete Diary</string>
    <string name="delete_bcs">Delete BCS</string>
    <string name="delete_cpd">Delete CPD</string>
    <string name="execute">Execute</string>
    <string name="manage">Manage</string>
    <string name="your_databases">Your Databases</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="adimdai">aDIMDAI</string>
    />
</resources>
