<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dogroll.admin.vetlauncher.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo"
        android:scaleType="fitCenter"
        android:src="@mipmap/blanklogoimg" />

    <ImageButton
        android:id="@+id/settingbtn"
        style="@style/RedButton"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:tint="@color/BloodRed"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/settings_button_image"
        android:scaleType="fitCenter"
        android:src="@mipmap/settings_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Usertxtview"
        android:layout_width="63dp"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/settingbtn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="false"
        android:layout_centerVertical="false"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/imageView"
        android:layout_toRightOf="@+id/imageView"
        android:gravity="center"
        android:text="@string/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingbtn" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="125dp">

        <LinearLayout
            android:id="@+id/linearMainAct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/vetVisitbtn"
                style="@style/RedButton"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:text="@string/vet_visit_record" />

            <Button
                android:id="@+id/CNbtn"
                style="@style/RedButton"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/clinical_notes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/BCSbtn" />

            <Button
                android:id="@+id/CDUbtn"
                style="@style/RedButton"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/controlled_drug_use"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/diarybtn"
                style="@style/RedButton"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/vet_diary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/CPDRecordBTN"
                style="@style/RedButton"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/cpd_records"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/datebtn" />


            <Button
                android:id="@+id/BCSbtn"
                style="@style/RedButton"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/body_condition_scoring"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/CPDRecordBTN" />


            <Button
                android:id="@+id/Stocktakebtn"
                style="@style/RedButton"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/stocktake"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/BCSbtn" />

            <Button
                android:id="@+id/clientsBTN"
                style="@style/RedButton"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/clients"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Stocktakebtn" />

            <Button
                android:id="@+id/notificationsBTN"
                style="@style/RedButton"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/notifications"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clientsBTN" />

            <Button
                android:id="@+id/transferBTN"
                style="@style/RedButton"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/department_transfer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notificationsBTN" />

            <Button
                android:id="@+id/aboutBTN"
                style="@style/RedButton"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/about"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/transferBTN" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
