<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/adTitle"
            style="@style/WrittenText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/adMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/yearGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:paddingEnd="10dp"
                android:paddingLeft="0dp"
                android:paddingStart="0dp">

                <TextView
                    style="@style/WrittenText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/year" />

                <RadioButton
                    android:id="@+id/checkBoxThis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/checkBoxLast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/checkBoxPrevLast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/checkBoxPrevPrevLast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/classGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView12"
                    style="@style/WrittenText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/class_cpd" />

                <RadioButton
                    android:id="@+id/checkBoxCVE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cve"
                    android:text="@string/continuing_veterinary_ed" />

                <RadioButton
                    android:id="@+id/checkBoxCL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cla"
                    android:text="@string/collegial_learning" />

                <RadioButton
                    android:id="@+id/checkBoxSDL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sdl"
                    android:text="@string/self_directed_learning" />
            </RadioGroup>
        </LinearLayout>
        <Spinner
            android:id="@+id/cpdQuickSpinner"
            android:layout_width="match_parent"
            style="@style/spinner_style"
            android:layout_height="35dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">


            <TextView
                android:id="@+id/tvCPDHours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/hours" />

            <EditText
                android:id="@+id/etCPDHours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:inputType="number"
                tools:ignore="Autofill,LabelFor" />

            <TextView
                android:id="@+id/tvCDPconverted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start" />
        </LinearLayout>

        <Button
            android:id="@+id/btnCustomAlert"
            style="@style/RedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/insert" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>